# Patent-Diagram-Engine

./: .gitignore  CLAUDE.md  PROJECT_DIRECTION.md  README.md  binarization.py  corner_segregation.py  dev.sh  distance_transform.py  emit_svg.py  fit_primitives.py  graph_build.py  graph_cleanup.py  label_identify.py  label_leaders.py  label_place.py  main.py  morphological_preprocessing.py  png_to_svg.py  preprocess.py  pyproject.toml  regularize_geometry.py  ridge_extraction.py  ruff.toml  run_pipeline.py  stage0_init_run.py  stroke_segregation.py  work_session.md
Method-Draw/src/: index.html
Method-Draw/src/js/: postmessage-bridge.js
backend/: main.py
examples/sample_inputs/: .gitkeep
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/steps/: StepAnchors.jsx  StepEdit.jsx  StepReview.jsx  StepUpload.jsx
old approach/: binarization.py  corner_segregation.py  morphological_preprocessing.py
src/patentdraw/: __init__.py  cli.py  config.py  models.py  pipeline.py  tracer.py
src/patentdraw/components/: __init__.py  grouping.py  operations.py  proposals_ml.py
src/patentdraw/export/: __init__.py  pdf_layout.py  svg_package.py
src/patentdraw/io/: __init__.py  load_image.py  save_artifacts.py
src/patentdraw/labels/: __init__.py  label_propose.py  leader_route.py  (+1 more)
tests/: __init__.py  conftest.py  test_bezier_fit.py  test_binarize.py  test_grouping_ops.py  test_integration.py  test_numbering_stability.py  test_skeleton_graph.py  test_tracer.py
utils/: __init__.py  artifacts.py  io.py
(+11 files in other folders)
